--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Summarise with GPT-4o",
-  "version": "1.2",
+  "version": "1.3",
   "description": "Copies text from the page or YouTube transcript and summarises it using the ChatGPT API.",
   "permissions": [
     "activeTab",
@@ -11,7 +11,8 @@
   ],
   "host_permissions": [
     "https://api.openai.com/",
-    "https://www.youtube.com/*"
+    "https://www.youtube.com/*",
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "popup.html",
