--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "Summarise with GPT-4o",
-  "version": "1.3",
-  "description": "Copies text from the page or YouTube transcript and summarises it using the ChatGPT API.",
+  "name": "Summarise with GPT-4",
+  "version": "1.4",
+  "description": "Summarises text from web pages or YouTube transcripts using the ChatGPT API.",
   "permissions": [
     "activeTab",
     "storage",
     "scripting",
-    "contextMenus"
+    "contextMenus",
+    "tabs",
+    "webRequest",
+    "webRequestBlocking"
   ],
   "host_permissions": [
-    "https://api.openai.com/",
-    "https://www.youtube.com/*",
     "<all_urls>"
   ],
   "action": {
