--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,20 @@
   },
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"],
+      "run_at": "document_end"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "prompts.js"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
