--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
     "48": "summarise.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
