--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Summarise with GPT-4o-mini",
-  "version": "1.4",
+  "version": "1.7.3",
   "description": "Summarises text from web pages or YouTube transcripts using the ChatGPT API.",
   "permissions": [
     "activeTab",
@@ -9,7 +9,8 @@
     "scripting",
     "contextMenus",
     "tabs",
-    "tts"
+    "tts",
+    "downloads"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -34,6 +35,7 @@
         "prompt.js",
         "key.txt",
         "displaySummary.js",
+        "displayError.js",
         "youtubeTranscript.js"
       ],
       "matches": ["<all_urls>"]
