--- a/manifest.json
+++ b/manifest.json
@@ -44,6 +44,7 @@
         "displaySummary.js",
         "displayError.js",
         "youtubeTranscript.js",
+        "contentScript.js",
         "sidebarStyles.css"
       ],
       "matches": ["<all_urls>"]
